Home page updates

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,8 +6,10 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-card style="width: 95%; margin: auto;">
-  <ion-card-content>
-    <ion-button color="light" expand="block" (click)="login()">Login Page</ion-button>
-  </ion-card-content>
+<ion-card style="width: 70%; margin: auto;">
+  <ion-button shape="round" size="default" expand="block" (click)="login()">Criar conta com Google</ion-button>
+</ion-card>
+
+<ion-card style="width: 70%; margin: auto; color:violet;">
+  <ion-button shape="round" size="default" expand="block">Fazer login com Google</ion-button>
 </ion-card>
