--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -2,9 +2,10 @@
   text-align: center;
 
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
+  width: 217px;
+  height: 40px;
+  left: 99px;
+  top: 664px;
   transform: translateY(-50%);
 }
 
@@ -17,7 +18,7 @@
   font-size: 16px;
   line-height: 22px;
 
-  color: #8c8c8c;
+  color: #3a3546;
 
   margin: 0;
 }
