home and login setup

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title style="margin: auto; width: 30%;">
       Home
@@ -6,10 +6,17 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-card style="width: 70%; margin: auto;">
-  <ion-button shape="round" size="default" expand="block" (click)="login()">Criar conta com Google</ion-button>
-</ion-card>
+<ion-content>
 
-<ion-card style="width: 70%; margin: auto; color:violet;">
-  <ion-button shape="round" size="default" expand="block">Fazer login com Google</ion-button>
-</ion-card>
+<ion-img class="background" src="assets/home-page.png"></ion-img>
+
+  <ion-text color="cesinha">
+    <h4 class="welcome">Aproveite sua vida acadêmica e profissional ao máximo.</h4>
+  </ion-text>
+
+  <ion-button class="sign" color="borahae" shape="round" size="default" (click)="login()">Criar conta com Google</ion-button>
+
+  <ion-button class="login" color="transparent" shape="round" size="default">Fazer login com Google</ion-button>
+
+
+</ion-content>
