--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -6,7 +6,7 @@
 
 <ion-content>
 
-<ion-img class="logo" src="assets/Logo_CESAR.png" alt="falha ao carregar"></ion-img>
+<ion-img class="logo" src="assets/cesar-logo.png" alt="falha ao carregar"></ion-img>
 
 <div class="form">
   <ion-card class="loginCard">
