--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -6,8 +6,10 @@
 {
   width: 50%;
   margin: auto;
-  margin-top: 15%;
-  margin-bottom: 15%;
+  top: 18.59%;
+  bottom: 71.53%;
+  left: 38.65%;
+  right: 38.89%;
 }
 .loginHeader{
   width: 20%;
