registration page one

--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -6,4 +6,45 @@
 
 <ion-content>
 
+  <ion-progress-bar class="progress" color="borahae" value="0.2"></ion-progress-bar>
+
+
+  <ion-img class="backclip" src="assets/bg-clip.png" alt="falha ao carregar"></ion-img> 
+
+  <ion-avatar class="icon">
+    <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+  </ion-avatar>
+
+  <ion-text class="tocall" color="borahae">Como gostaria que te chamassem?</ion-text>
+  <ion-card style="background: transparent; position: absolute; top: 211px; height: 42px; width: 344px;">
+    <ion-item>
+        <ion-input type="text"></ion-input>
+    </ion-item>
+  </ion-card>
+
+  <ion-text class="prono" color="borahae">Pronomes</ion-text>
+  <ion-card style="background: transparent; position: absolute; top: 311px; height: 42px; width: 344px;">
+    <ion-item>
+        <ion-input type="text"></ion-input>
+    </ion-item>
+  </ion-card>
+
+  <ion-text class="whoareu" color="borahae">Quem é você?</ion-text>
+  <ion-text class="descri" color="borahae">Espaço reservado para falar um pouco sobre você e suas características pessoais!</ion-text>
+  <ion-card style="position: absolute; top: 488px; height: 100px; width: 344px;">
+    <ion-item>
+        <ion-input type="text"></ion-input>
+    </ion-item>
+  </ion-card>
+
+  <ion-text class="prtf" color="borahae">Github, Portfólio e/ou Blog</ion-text>
+  <ion-card style="background: transparent; position: absolute; top: 628px; height: 42px; width: 344px;">
+    <ion-item>
+        <ion-input type="text"></ion-input>
+    </ion-item>
+  </ion-card>
+  
+  <ion-button class="skip" color="transparent" shape="round" size="default">Pular Cadastro</ion-button>
+  <ion-button class="next" color="borahae" shape="round" size="default">Próximo</ion-button>
+
 </ion-content>
