--- a/src/app/register2/register2.page.html
+++ b/src/app/register2/register2.page.html
@@ -11,6 +11,8 @@
 
   <ion-img class="backclip" src="assets/bg-clip.png" alt="falha ao carregar"></ion-img> 
 
+  <ion-text class="titulo" color="borahae">Formação</ion-text>
+  <ion-text class="descri" color="borahae">Aqui estão inclusos cursos de graduação e pós-graduação, tá?</ion-text>
 
   <ion-text class="escola" color="borahae">Grau de escolaridade</ion-text>
   <ion-card style="background: transparent; position: absolute; top: 211px; height: 42px; width: 344px;">
@@ -27,18 +29,24 @@
   </ion-card>
 
   <ion-text class="begin" color="borahae">Data de início</ion-text>
-  <ion-card style="position: absolute; top: 488px; height: 100px; width: 344px;">
+  <ion-card style="position: absolute; top: 411px; height: 42px; width: 344px;">
     <ion-item>
         <ion-input type="text"></ion-input>
     </ion-item>
   </ion-card>
 
   <ion-text class="end" color="borahae">Data de término (ou prevista)</ion-text>
-  <ion-card style="background: transparent; position: absolute; top: 628px; height: 42px; width: 344px;">
+  <ion-card style="background: transparent; position: absolute; top: 511px; height: 42px; width: 344px;">
     <ion-item>
         <ion-input type="text"></ion-input>
     </ion-item>
   </ion-card>
+
+  <ion-fab class="mais" vertical="center" horizontal="end">
+    <ion-fab-button color="borahae">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
   
   <ion-button class="skip" color="transparent" shape="round" size="default">Pular Cadastro</ion-button>
   <ion-button class="next" color="borahae" shape="round" size="default">Próximo</ion-button>
