page three mods

--- a/src/app/register3/register3.page.html
+++ b/src/app/register3/register3.page.html
@@ -11,8 +11,9 @@
 
   <ion-img class="backclip" src="assets/bg-clip.png" alt="falha ao carregar"></ion-img> 
 
-  <ion-text class="titulo" color="borahae">Formação</ion-text>
-  <ion-text class="descri" color="borahae">Aqui estão inclusos cursos de graduação e pós-graduação, tá?</ion-text>
+  <ion-text class="titulo" color="borahae">Experiência</ion-text>
+  <ion-text class="descri" color="borahae">Caso você tenha alguma experiência legal que queira registrar por aqui, 
+    vamos adicioná-las ao seu perfil! Caso ainda não tenha, tudo bem! Basta pular esta etapa!</ion-text>
 
   <ion-text class="escola" color="borahae">Grau de escolaridade</ion-text>
   <ion-card style="background: transparent; position: absolute; top: 211px; height: 42px; width: 344px;">
