--- a/src/app/begin/begin.page.html
+++ b/src/app/begin/begin.page.html
@@ -18,6 +18,6 @@
 
   <ion-img class="imag-be" src="assets/begin-page.png"></ion-img>
 
-  <ion-button class="begin" color="borahae" shape="round" size="default">Começar</ion-button>
+  <ion-button class="begin" color="borahae" shape="round" size="default" (click)="init()">Começar</ion-button>
 
 </ion-content>
