--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,9 +14,9 @@
     <h4 class="welcome">Aproveite sua vida acadêmica e profissional ao máximo.</h4>
   </ion-text>
 
-  <ion-button class="sign" color="borahae" shape="round" size="default" (click)="login()">Criar conta com Google</ion-button>
+  <ion-button class="sign" color="borahae" shape="round" size="default" (click)="signUp()">Criar conta com Google</ion-button>
 
-  <ion-button class="login" color="transparent" shape="round" size="default">Fazer login com Google</ion-button>
+  <ion-button class="login" color="transparent" shape="round" size="default" (click)="login()">Fazer login com Google</ion-button>
 
 
 </ion-content>
