--- a/src/app/register3/register3.page.html
+++ b/src/app/register3/register3.page.html
@@ -15,29 +15,36 @@
   <ion-text class="descri" color="borahae">Caso você tenha alguma experiência legal que queira registrar por aqui, 
     vamos adicioná-las ao seu perfil! Caso ainda não tenha, tudo bem! Basta pular esta etapa!</ion-text>
 
-  <ion-text class="escola" color="borahae">Grau de escolaridade</ion-text>
-  <ion-card style="background: transparent; position: absolute; top: 211px; height: 42px; width: 344px;">
+  <ion-text class="xp" color="borahae">Emprese/Projeto</ion-text>
+  <ion-card style="background: transparent; position: absolute; top: 245px; height: 42px; width: 344px;">
     <ion-item>
         <ion-input type="text"></ion-input>
     </ion-item>
   </ion-card>
 
-  <ion-text class="course" color="borahae">Curso</ion-text>
-  <ion-card style="background: transparent; position: absolute; top: 311px; height: 42px; width: 344px;">
+  <ion-text class="funcao" color="borahae">Função</ion-text>
+  <ion-card style="background: transparent; position: absolute; top: 330px; height: 42px; width: 344px;">
     <ion-item>
         <ion-input type="text"></ion-input>
     </ion-item>
   </ion-card>
 
   <ion-text class="begin" color="borahae">Data de início</ion-text>
-  <ion-card style="position: absolute; top: 411px; height: 42px; width: 344px;">
+  <ion-card style="position: absolute; top: 430px; height: 42px; width: 344px;">
     <ion-item>
         <ion-input type="text"></ion-input>
     </ion-item>
   </ion-card>
 
-  <ion-text class="end" color="borahae">Data de término (ou prevista)</ion-text>
-  <ion-card style="background: transparent; position: absolute; top: 511px; height: 42px; width: 344px;">
+  <ion-text class="end" color="borahae">Data de término</ion-text>
+  <ion-card style="background: transparent; position: absolute; top: 530px; height: 42px; width: 344px;">
+    <ion-item>
+        <ion-input type="text"></ion-input>
+    </ion-item>
+  </ion-card>
+
+  <ion-text class="about" color="borahae">Descrição</ion-text>
+  <ion-card style="background: transparent; position: absolute; top: 630px; height: 70px; width: 344px;">
     <ion-item>
         <ion-input type="text"></ion-input>
     </ion-item>
@@ -49,7 +56,8 @@
     </ion-fab-button>
   </ion-fab>
   
-  <ion-button class="skip" color="transparent" shape="round" size="default">Pular Cadastro</ion-button>
+  <ion-button class="back" color="transparent" shape="round" size="default">Voltar</ion-button>
   <ion-button class="next" color="borahae" shape="round" size="default">Próximo</ion-button>
+  <ion-button class="skip" color="transparent" shape="round" size="default">Pular</ion-button>
 
 </ion-content>
