--- a/src/app/register4/register4.page.html
+++ b/src/app/register4/register4.page.html
@@ -1,9 +1,56 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>register4</ion-title>
+    <ion-title>register2</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
+  <ion-progress-bar class="progress" color="borahae" value="0.7"></ion-progress-bar>
+
+
+  <ion-img class="backclip" src="assets/bg-clip.png" alt="falha ao carregar"></ion-img> 
+
+  <ion-text class="titulo" color="borahae">Habilidades</ion-text>
+  <ion-text class="descri" color="borahae">Elas são essenciais para que o recrutador saiba se você se encaixa na vaga. 
+    Podem incluir algum idioma específico, uma ferramenta, linguagens de programação, entre outros.
+  </ion-text>
+
+  <div>
+    <ion-chip color="borahae" style="position: absolute; width: 72px; height: 32px; left: 33px;top: 320px;">
+      <ion-label>HTML</ion-label>
+    </ion-chip>
+
+    <ion-chip color="borahae" style="position: absolute; width: 72px; height: 32px; left: 148px;top: 320px;">
+      <ion-label>C++</ion-label>
+    </ion-chip> 
+
+    <ion-chip color="borahae" style="position: absolute; width: 72px; height: 32px; left: 260px;top: 320px;">
+      <ion-label>Python</ion-label>
+    </ion-chip> 
+
+    <ion-chip color="borahae" style="position: absolute; width: 72px; height: 32px; left: 33px;top: 420px;">
+      <ion-label>Figma</ion-label>
+    </ion-chip>
+
+    <ion-chip color="borahae" style="position: absolute; width: 72px; height: 32px; left: 148px;top: 420px;">
+      <ion-label>Inglês</ion-label>
+    </ion-chip> 
+
+    <ion-chip color="borahae" style="position: absolute; width: 72px; height: 32px; left: 260px;top: 420px;">
+      <ion-label>Ilustrator</ion-label>
+    </ion-chip> 
+
+  </div>
+
+  <ion-fab class="mais" vertical="center" horizontal="end">
+    <ion-fab-button color="borahae">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  
+  <ion-button class="back" color="transparent" shape="round" size="default">Voltar</ion-button>
+  <ion-button class="next" color="borahae" shape="round" size="default">Próximo</ion-button>
+  <ion-button class="skip" color="transparent" shape="round" size="default">Pular</ion-button>
 
 </ion-content>
