page six updates

--- a/src/app/register5/register5.page.html
+++ b/src/app/register5/register5.page.html
@@ -1,9 +1,56 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>register5</ion-title>
+    <ion-title>register2</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
+  <ion-progress-bar class="progress" color="borahae" value="0.7"></ion-progress-bar>
+
+
+  <ion-img class="backclip" src="assets/bg-clip.png" alt="falha ao carregar"></ion-img> 
+
+  <ion-text class="titulo" color="borahae">Interesses</ion-text>
+  <ion-text class="descri" color="borahae">Para preencher a vaga é importante que seus interesses coincidam com a área de 
+    atuação da mesma, por isso, selecione aqueles que se encaixem em seu perfil.
+  </ion-text>
+
+  <div>
+    <ion-chip color="borahae" style="position: absolute; width: 72px; height: 32px; left: 33px;top: 320px;">
+      <ion-label>Back-end</ion-label>
+    </ion-chip>
+
+    <ion-chip color="borahae" style="position: absolute; width: 72px; height: 32px; left: 148px;top: 320px;">
+      <ion-label>Fullstack</ion-label>
+    </ion-chip> 
+
+    <ion-chip color="borahae" style="position: absolute; width: 72px; height: 32px; left: 260px;top: 320px;">
+      <ion-label>Front-end</ion-label>
+    </ion-chip> 
+
+    <ion-chip color="borahae" style="position: absolute; width: 72px; height: 32px; left: 33px;top: 420px;">
+      <ion-label>UX Design</ion-label>
+    </ion-chip>
+
+    <ion-chip color="borahae" style="position: absolute; width: 72px; height: 32px; left: 148px;top: 420px;">
+      <ion-label>Design Gráfico</ion-label>
+    </ion-chip> 
+
+    <ion-chip color="borahae" style="position: absolute; width: 72px; height: 32px; left: 260px;top: 420px;">
+      <ion-label>QA</ion-label>
+    </ion-chip> 
+
+  </div>
+
+  <ion-fab class="mais" vertical="center" horizontal="end">
+    <ion-fab-button color="borahae">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  
+  <ion-button class="back" color="transparent" shape="round" size="default">Voltar</ion-button>
+  <ion-button class="next" color="borahae" shape="round" size="default">Próximo</ion-button>
+  <ion-button class="skip" color="transparent" shape="round" size="default">Pular</ion-button>
 
 </ion-content>
