front end, last update for now

--- a/src/app/register2/register2.page.html
+++ b/src/app/register2/register2.page.html
@@ -48,7 +48,7 @@
     </ion-fab-button>
   </ion-fab>
   
-  <ion-button class="skip" color="transparent" shape="round" size="default">Pular Cadastro</ion-button>
-  <ion-button class="next" color="borahae" shape="round" size="default">Próximo</ion-button>
+  <ion-button class="skip" color="transparent" shape="round" size="default" (click)="back()">Volte</ion-button>
+  <ion-button class="next" color="borahae" shape="round" size="default" (click)="next()">Próximo</ion-button>
 
 </ion-content>
