--- a/src/app/register4/register4.page.html
+++ b/src/app/register4/register4.page.html
@@ -49,8 +49,8 @@
     </ion-fab-button>
   </ion-fab>
   
-  <ion-button class="back" color="transparent" shape="round" size="default">Voltar</ion-button>
-  <ion-button class="next" color="borahae" shape="round" size="default">Próximo</ion-button>
+  <ion-button class="back" color="transparent" shape="round" size="default" (click)="back()">Voltar</ion-button>
+  <ion-button class="next" color="borahae" shape="round" size="default" (click)="next()">Próximo</ion-button>
   <ion-button class="skip" color="transparent" shape="round" size="default">Pular</ion-button>
 
 </ion-content>
