--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -45,6 +45,6 @@
   </ion-card>
   
   <ion-button class="skip" color="transparent" shape="round" size="default">Pular Cadastro</ion-button>
-  <ion-button class="next" color="borahae" shape="round" size="default">Próximo</ion-button>
+  <ion-button class="next" color="borahae" shape="round" size="default" (click)="next()">Próximo</ion-button>
 
 </ion-content>
